--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/security.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/security.xhtml
@@ -5,14 +5,22 @@
                 xmlns:p="http://primefaces.org/ui">
     <script>
         $(document).ready(function (){
-            try
-            {
-                $('.idSecHtml').html(localStorage.getItem('ISINResponse'));
-                localStorage.setItem('ISINResponse', '');
-            }catch (e){
-                console.log("Error "+e);
-            } });
+        try
+        {
+            var vWatsonURL=$('.getTickerClass').val();
+            console.log("Ticker Watson URL "+vWatsonURL);
+            var vresponse = $.ajax({type: "GET", url: vWatsonURL, async: false}).responseText;
+            console.log("Ticker Watson response received ");
+            $('.idSecHtml').html(vresponse);
+
+        }catch (e){
+            console.log("Error "+e);
+        }
+        });
+
     </script>
+    <p:inputText type="hidden" id="idWatsonURL"
+                 value="#{citidemo.watsonISINURL}" styleClass="getTickerClass"/>
         <div id="layout-portlets-cover">
             <div class="EmptyBox10"></div>
             <p:scrollPanel mode="native" style="width: 100%; height: 400px; padding-bottom: 100px;">
