--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/linkedInLogin.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/linkedInLogin.xhtml
@@ -3,7 +3,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/template/common/template.xhtml">
+                template="/template/common/simple.xhtml">
     <f:metadata>
         <f:event type="preRenderView" listener="#{watsonBean.preRenderLinkedInWidget}" />
     </f:metadata>
