--- a/Invessence/modules/web/src/main/webapp/watson.xhtml
+++ b/Invessence/modules/web/src/main/webapp/watson.xhtml
@@ -29,12 +29,9 @@
                         <div class="EmptyBox10"></div>
                         <div class="Seperator"></div>
                         <div class="EmptyBox10"></div>
-                       <!-- <p:button styleClass="loginStartedBtn Fs16" value="Login"
-                                         outcome="/pages/consumer/citi/demo/linkedInLogin.xhtml" />-->
-                        <p:commandButton styleClass="linkedinbutton citibutton Fs16" value="Sign In with LinkedIn" actionListener="#{watsonBean.preRenderLinkedInWidget}"></p:commandButton>
-                        <!--
-                            <p:button  value="Register" styleClass="Fs16 OrangeButton" href="/signup.xhtml"/>
-                        -->
+
+                        <p:button styleClass="linkedinbutton citibutton Fs16" value="Sign In with LinkedIn"
+                                  outcome="/pages/consumer/citi/demo/linkedInLogin.xhtml"/>
 
                         <div class="EmptyBox50"></div>
                     </h:form>
