Code check in By Sagar for File Processing changes

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q6.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q6.xhtml
@@ -16,7 +16,8 @@
                 <div class="EmptyBox5"></div>
             </p:panel>
             <h5>
-                6. What level of volatility are you prepared to accept?
+                6. Most investments can fluctuate up and down(i.e volatility). How much could your investment fall in value
+                over 12 month period before you begin to feel concerned and anxious?
             </h5>
             <p:selectOneRadio value="#{uobpb.riskCalculator.ans8}" id="uobq6rb"
                               layout="pageDirection">
