--- a/Invessence/modules/web/src/main/webapp/pages/productadmin/accountEmulation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/productadmin/accountEmulation.xhtml
@@ -3,7 +3,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/template/common/main.xhtml">
+                template="/template/common/template.xhtml">
 
     <ui:define name="content">
         <div class="layout-portlets-box">
@@ -32,7 +32,7 @@
 
 
                     <h2>
-                        <h:outputText value="Emulation Process" styleClass="Wid90"/>
+                        <h:outputText value="Account Emulation Process" styleClass="Wid90"/>
                     </h2>
 
                     <div class="EmptyBox30"></div>
